--- a/KlipTok.Dock/public/panel.html
+++ b/KlipTok.Dock/public/panel.html
@@ -2,25 +2,53 @@
 <html>
 <head>
     <title>Viewer Page</title>
+		<style>
+			:root {
+				--purple: #5900db;
+			}
+
+			li > img {
+				width: 30px;
+				height: 30px;
+				border-radius: 16px;
+				border: solid 2px var(--purple);
+				margin-right: 3px;
+			}
+
+			ul {
+				padding: 0;
+				margin: 0;
+			}
+
+			li {
+				margin: 0;
+				display: flex;
+				align-items: center;
+			}
+
+			li > span {
+				width: 14em;
+			}
+
+			#logo > img {
+				display: block;
+				margin: 0 auto;
+			}
+		</style>
 </head>
-<body style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">
+<body style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; background-color: var(--purple); color: #FFF">
     <div id="app" class="full-height"></div>
     <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
-    <!-- If you use any external libraries, such as jQuery, you must include
-      them as part of your extension.  Twitch does not allow extensions to link
-      to external libraries. -->
-    <script src="jquery-3.3.1.min.js" type="text/javascript"></script>
-    <script src="viewer.js" type="text/javascript"></script>
-    <h2>Hello, World!</h2>
-    <p>Would you care to cycle a color?</p>
-    <div>
-        <input type="button" id="cycle" disabled="disabled" value="Yes, I would" />
-    </div>
-    <div style="float: left; position: relative; left: 50%">
-        <div id="color" style="border-radius: 50px; transition: background-color 0.5s ease; margin-top: 30px; width: 100px; height: 100px; background-color: #6441A4; float: left; position: relative; left: -50%">
-        </div>
-    </div>
+		<script src="mustache.min.js"></script>
+
+		<script src="viewer.js" type="text/javascript"></script>
+    <a id="logo" href=""><img width="230" src="wordmark_subtitle.png" alt="KlipTok - Social Fun with Videos" /></a>
+    <p>Clippers with the most views:</p>
     <div id="list">
+			<ul id="mostViewedClippers">
+
+			</ul>
     </div>
-</body>
+
+	</body>
 </html>
