--- a/KlipTok.Dock/public/panel.html
+++ b/KlipTok.Dock/public/panel.html
@@ -38,17 +38,18 @@
 </head>
 <body style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; background-color: var(--purple); color: #FFF">
     <div id="app" class="full-height"></div>
-    <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
-		<script src="mustache.min.js"></script>
-
-		<script src="viewer.js" type="text/javascript"></script>
-    <a id="logo" href=""><img width="230" src="wordmark_subtitle.png" alt="KlipTok - Social Fun with Videos" /></a>
+		
+    <a id="logo" href="" target="_blank"><img width="230" src="wordmark_subtitle.png" alt="KlipTok - Social Fun with Videos" /></a>
     <p>Clippers with the most views:</p>
     <div id="list">
 			<ul id="mostViewedClippers">
-
+				
 			</ul>
     </div>
+		
+		<script rel="preload" src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
+		<script src="js/mustache.min.js"></script>
+		<script src="js/viewer.js" type="text/javascript"></script>
 
 	</body>
 </html>
