Updated radar column chart to a purple background. Added README

--- a/KlipTok.Dock/public/panel.html
+++ b/KlipTok.Dock/public/panel.html
@@ -60,12 +60,12 @@
 
 		.panel { 
 			width: 290px;
-			margin-top: 5px;
+			margin: 5px auto 0;
 		}
 
 	</style>
 	<link rel="stylesheet" href="css/kendo.common.min.css" />
-	<link rel="stylesheet" href="css/kendo.default.min.css" />
+	<link rel="stylesheet" href="css/kendo.default.min.css" /> 
 </head>
 
 <body style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; background-color: var(--purple); color: #FFF">
