Updated config panel

--- a/KlipTok.Dock/public/config.html
+++ b/KlipTok.Dock/public/config.html
@@ -22,9 +22,16 @@
       to external libraries. -->
     <script src="js/config.js" type="text/javascript"></script>
     <h2>KlipTok Dock Configuration</h2>
-    <p>To run this extension, your channel must be tracked on the KlipTok web application</p>
+		<p>KlipTok Dock will report on your Twitch channel the performance and interesting statistics about the clips created for your channel.</p>
+    <p>To run this extension, your channel must first be tracked on the KlipTok web application.</p>
 		<p>
-			You can verify that your channel is being tracked at <a href="https://kliptok.com/FOO" id="kliptok_link" target="_blank">KlipTok.com</a>
+			You can sign-up or verify that your channel is being tracked at KlipTok by clicking here to visit your channel on <a href="https://kliptok.com/FOO" id="kliptok_link" target="_blank">KlipTok.com</a>.  If your
+			channel is not currently monitored, there will be a button that will allow you to sign-up and activate KlipTok's Twitch clip tracking features.
 		</p>
+		<p>
+			Once your channel is being monitored by KlipTok, KlipTok will generate reports about the clips on your channel.  Additionally,
+			KlipTok will make your clips searchable on the KlipTok.com website both by title AND by the words spoken in the clip.  This means that you can search for clips by what you SAID on Twitch.
+		</p>
+		<p>We'll gradually add search capabilities and other clip metrics to this extension</p>
 </body>
 </html>
